--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
-  "name": "boilerplate-rnmapbox",
-  "version": "1.0.0",
-  "main": "expo-router/entry",
+  "name": "odpmaps",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "start": "react-native start",
+    "test": "jest"
   },
   "dependencies": {
-    "@rnmapbox/maps": "^10.1.5",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@rnmapbox/maps": "^10.1.19",
     "react": "18.2.0",
-    "react-native": "0.72.10",
-    "expo-splash-screen": "~0.20.5",
-    "expo-router": "^2.0.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native": "0.73.7",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.73.1",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.2.0"
   },
-  "resolutions": {
-    "react-refresh": "~0.14.0"
-  },
-  "private": true
+  "engines": {
+    "node": ">=18"
+  }
 }
